test/type_errors/cases/sql_unknown_attr.ml
[%%eta.sql.table type t = { id : int [@bogus] }]
